cozycast-server/src/main/resources/static/css/styles.css
* {
    box-sizing: border-box;
    scrollbar-color: #346 #235;
}

:root {
    --cozycast-noise: url("/png/noise_128.png");
    --cozycast-dpr: 1;
    font-family: sans-serif;
}

::-webkit-scrollbar {
    background: #346;
}

::-webkit-scrollbar-thumb {
    background: #235;
}

html, body, #pagecontent, #videosizer {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}

#pagecontent {
    display: grid;
    grid:
    "video chat" 1fr
    "toolbar chat" 5em
    / 1fr 15em;
}

@media (max-width: 780px) {
    #pagecontent {
        grid:
        "video" 40%
        "toolbar" 4em
        "chat" 1fr;
    }

    #messages {
        scrollbar-width: thin;
    }
}

#pagecontent > * {
    background: fixed repeat top left var(--cozycast-noise);
    background-size: calc(128px / var(--cozycast-dpr));
}

#videoBig, #video {
    min-width: 0;
    min-height: 0;
}

#videoBig {
    grid-area: video;
    position: relative;
    background-color: #181828;
}

#videosizer {
    display: flex;
}

#video {
    flex-grow: 1;
}

#chat {
    grid-area: chat;
    display: flex;
    flex-direction: column;
    background-color: #123;
    min-height: 0;
}

#chatbox {
    padding: 10px;
}

#pagetoolbar {
    grid-area: toolbar;
    display: flex;
    background-color: #123;
    min-width: 0;
}

#controls {
    display: grid;
    grid-gap: .5em;
    padding: .5em;
    grid-template-columns: repeat(4, 1fr);
}

.btn {
    color: white;
    border-radius: 0.2em;
    transition: background-color 0.2s;
}

.btn-primary {
    background-color: #17c;
    border-color: #048;
}

.btn-primary:hover {
    background-color: #048;
}

.btn-danger {
    background-color: #f90;
    border-color: #b60;
}

.btn-danger:hover {
    background-color: #b60;
}

#copyright {
    grid-column: span 3;
    color: lightgray;
    font-size: .5em;
}

.message {
    background-color: rgba(0, 0, 0, 0.3);
    margin-top: 10px;
    padding: .5em;
    border-radius: .2em;
    box-shadow: 0 0 4px black inset;
}

.message > div:not(.username) {
    margin-left: .5em;
    font-size: .8em;
}

#videocontrols {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
}

#chat, .chat-link, .chat-link:hover  {
    color: white;
}

.username {
    font-weight: 600;
}

#messages {
    flex-grow: 1;
    padding-left: 10px;
    padding-right: 10px;
    overflow-y: scroll;
    word-break: break-word;
}

.chat-image {
    display: block;
    height: auto;
    min-width: 100%;
    width: 100%;
}

.chat-image img {
    display: block;
    height: 100%;
    width: 100%;
}

#chatbox-textarea {
    color: white;
    background: #235 var(--cozycast-noise);
    resize: none;
    width: 100%;
    border-radius: 5px;
    border-color: #124;
    font: .8em sans-serif;
    padding: .3em;
    height: 5em;
}

#userlist {
    flex-grow: 1;
    display: flex;
    min-width: 0;
    overflow: auto hidden;
    scrollbar-width: thin;
}

.user {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;
    margin-left: 5px;
    margin-right: 5px;
}

.remote {
    position: absolute;
    bottom: 0px;
    right: 0px;
    background-color: #e4910a;
}

.volumeSlider {
    align-self: center;
    -webkit-appearance: none;
    appearance: none;
    width: 100px;
    height: 5px;
    background: #346;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

.volumeSlider::-moz-range-thumb, .volumeSlider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 15px;
    height: 15px;
    background: #235;
    cursor: pointer;
    border-radius: 50%;
}

#typing {
    min-height: 1.25em;
    line-height: 1.25;
}

.paused-screen {
    background: black none repeat scroll 0% 0%;
    height: 100%;
    display: flex;
    justify-content: center;
}

.play-button {
    display: flex;
    justify-content: center;
    flex-direction: column;
    color: white;
}

.loading-screen {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.loading-animation {
    animation-name: spin;
    animation-duration: 1000ms;
    animation-iteration-count: infinite;
    animation-timing-function: ease;
}

@keyframes spin {
    from {
        transform:rotate(360deg);
    }
    to {
        transform:rotate(0deg);
    }
}

#profile-modal-background {
    position: fixed;
    z-index: 3;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.7)
}

#profile-modal {
    display: flex;
    flex-direction: column;
    align-items: center;
    background: #123 var(--cozycast-noise);
    margin: 15% auto; /* 15% from the top and centered */
    padding: 10px;
    border: 1px solid black;
    border-radius: 1em;
    box-shadow: 0 0 1em black;
    width: 30%;
    color: #fff;
}

#profile-modal > .title {
    display: flex;
    align-self: stretch;
}

#profile-modal > .title > div {
    text-align: center;
    flex-grow: 1;
}

#profile-modal-close {
    width: 1.5em; height: 1.5em;
    color: #fff;
    font-weight: bold;
    border: none;
    background-color: rgba(0, 0, 0, 0.3);
    border-radius: 50%;
    box-shadow: 0 0 3px black inset;
}

#profile-modal-close:hover {
    color: #337ab7;
}

#profile-modal-username {
    background: #2c3e50;
    border: 1px solid #fff;
    padding: 5px;
}

#profile-modal .title{
    display: flex;
    font-size: 2em;
}

#profile-modal .btn {
    margin-top: .5em;
}

.image {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
}

.avatar {
    border-radius: 50%;
    width: 60px;
    height: 60px;
    position: relative;
}

.avatar.big {
    border-width: 3px;
    box-shadow: 0 0 1em black inset;
    width: 180px;
    height: 180px;
}

.uploader-overlay {
    display: none;
}

.image:hover .uploader-overlay {
    display: flex;
    justify-content: center;
    flex-direction: column;
    width:100%;
    height:100%;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 50%;
    text-align: center;
    font-size: 2em;
}

.uploader-overlay .center {
    text-align: center;
}

.uploader-overlay input[type="file"] {
    display: none;
}

